--- a/admin.html
+++ b/admin.html
@@ -1,32 +1,30 @@
 
 <!DOCTYPE html>
+
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <title>Administração</title>
-    <link href="style.css" rel="stylesheet">
+<meta charset="utf-8"/>
+<title>Administração</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
-<body>
+<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
+<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
+<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
+</ul>
+</div>
+
 <div style="text-align: center; padding: 10px; background-color: white; position: fixed; top: 0; left: 220px; right: 0; z-index: 1000;">
-  <img src="img/ulsas_logotipo.png" alt="Logotipo ULSAS" style="max-height: 80px;">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
 </div>
 
-    
-
-<div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-  <ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-    <li style="margin-bottom: 15px;"><a href="index.html" style="color: white; text-decoration: none;">Início</a></li>
-    <li style="margin-bottom: 15px;"><a href="agendamentos.html" style="color: white; text-decoration: none;">Agendamentos</a></li>
-    <li style="margin-bottom: 15px;"><a href="calendario.html" style="color: white; text-decoration: none;">Calendário</a></li>
-    <li style="margin-bottom: 15px;"><a href="salas.html" style="color: white; text-decoration: none;">Salas</a></li>
-    <li style="margin-bottom: 15px;"><a href="admin.html" style="color: white; text-decoration: none;">Administração</a></li>
-  </ul>
+<div class="content">
+<h2>Painel de Administração</h2>
+<p>Funcionalidades administrativas estarão aqui.</p>
 </div>
-
-
-    <div class="content">
-        <h2>Painel de Administração</h2>
-        <p>Funcionalidades administrativas estarão aqui.</p>
-    </div>
 </body>
 </html>
