--- a/calendario.html
+++ b/calendario.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
+
 <html lang="pt">
 <head>
 <meta charset="utf-8"/>
 <title>Início</title>
 <link href="style.css" rel="stylesheet"/>
 </head>
-<body>
-<div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
+<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
 <ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="index.html" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="agendamentos.html" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="calendario.html" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="salas.html" style="color: white; text-decoration: none;">Salas</a></li>
-<li style="margin-bottom: 15px;"><a href="admin.html" style="color: white; text-decoration: none;">Administração</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
+<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
 </ul>
 </div>
+
+
 <div class="main-content">
-    <div class="header">
-        <img src="img/ulsas_logotipo.png" alt="Logotipo ULSAS" style="max-height: 80px;">
-    </div>
-    <div class="welcome">
-        <h1>Calendário</h1>
-        <body>
-<div style="text-align: center; padding: 10px; background-color: white; position: fixed; top: 0; left: 220px; right: 0; z-index: 1000;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="max-height: 80px;"/>
+<div class="header">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
 </div>
+<div class="welcome">
+<h1>Calendário</h1>
+<body>
+<div style="text-align: center; padding: 10px; background-color: white; position: fixed; top: 0; left: 220px; right: 0; z-index: 1000;">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;">
+</img></div>
 <div style="margin-left: 220px; margin-top: 100px; padding: 20px;">
 <div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
 <ul style="list-style: none; padding-left: 20px; font-weight: bold;">
@@ -52,7 +55,7 @@
     </script>
 </div>
 </body>
-    </div>
+</div>
 </div>
 </body>
 </html>
