--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
+
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <title>Início</title>
-    <link href="style.css" rel="stylesheet">
+<meta charset="utf-8"/>
+<title>Início</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
-<body>
-    <div class="sidebar">
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="agendamentos.html">Agendamentos</a></li>
-            <li><a href="calendario.html">Calendário</a></li>
-            <li><a href="salas.html">Salas</a></li>
-            <li><a href="administracao.html">Administração</a></li>
-        </ul>
-    </div>
+<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
+<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
+<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
+<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
+</ul>
+</div>
 
-    <div class="main-content">
-        <div class="header">
-            <img src="img/ulsas_logotipo.png" alt="Logotipo ULSAS">
-        </div>
-        <div class="welcome">
-            <h1>Bem-vindo à aplicação de agendamento de salas</h1>
-            <p>Use o menu à esquerda para navegar entre as páginas.</p>
-        </div>
-        <div class="eventos-semana">
-            <h2>Eventos da Semana</h2>
-            <div class="evento-card">
-                <div class="data">
-                    <span class="dia">15</span>
-                    <span class="mes">jul</span>
-                </div>
-                <div class="info">
-                    <strong>Formação RH</strong>
-                    <p>Sala Almada</p>
-                </div>
-            </div>
-            <div class="evento-card">
-                <div class="data">
-                    <span class="dia">17</span>
-                    <span class="mes">jul</span>
-                </div>
-                <div class="info">
-                    <strong>Reunião Equipa</strong>
-                    <p>Sala Tejo</p>
-                </div>
-            </div>
-        </div>
-    </div>
+
+<div class="main-content">
+<div class="header">
+<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
+</div>
+<div class="welcome">
+<h1>Bem-vindo à aplicação de agendamento de salas</h1>
+<p>Use o menu à esquerda para navegar entre as páginas.</p>
+</div>
+<div class="eventos-semana">
+<h2>Eventos da Semana</h2>
+<div class="evento-card">
+<div class="data">
+<span class="dia">15</span>
+<span class="mes">jul</span>
+</div>
+<div class="info">
+<strong>Formação RH</strong>
+<p>Sala Almada</p>
+</div>
+</div>
+<div class="evento-card">
+<div class="data">
+<span class="dia">17</span>
+<span class="mes">jul</span>
+</div>
+<div class="info">
+<strong>Reunião Equipa</strong>
+<p>Sala Tejo</p>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
