--- a/dashboard_template.html
+++ b/dashboard_template.html
@@ -1,70 +1,46 @@
 <!DOCTYPE html>
-
 <html lang="pt">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Dashboard CCII</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="modern-style.css" rel="stylesheet"/>
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <meta charset="UTF-8" />
+  <title>Dashboard_template</title>
+  <link rel="stylesheet" href="style.css" />
+  
 </head>
-<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
-<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
-</ul>
+<body>
+
+<div class="header">
+  <img src="ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
 </div>
 
-<div class="dashboard-container">
-<!-- Sidebar -->
-<aside class="sidebar">
-<div class="sidebar-header">
-<img alt="Logotipo" class="logo" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
+  
+<div class="sidebar">
+  <ul>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="agendamentos.html">Agendamentos</a></li>
+    <li><a href="calendario.html">Calendário</a></li>
+    <li><a href="salas.html">Salas</a></li>
+    <li><a href="admin.html">Administração</a></li>
+  </ul>
 </div>
-<nav class="nav">
-<a class="active" href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-<a href="#"><i class="fas fa-calendar"></i> Calendário</a>
-<a href="#"><i class="fas fa-map-marker-alt"></i> Mapa</a>
-<a href="#"><i class="fas fa-chalkboard-teacher"></i> Formações</a>
-<a href="#"><i class="fas fa-users"></i> Participantes</a>
-<a href="#"><i class="fas fa-cogs"></i> Admin</a>
-</nav>
-</aside>
-<!-- Main content -->
-<main class="main">
-<header class="main-header">
-<h1>Dashboard</h1>
-<button class="btn-primary"><i class="fas fa-plus"></i> Agendar Formação</button>
-</header>
-<section class="cards">
-<div class="card highlight">
-<h2>📅 Próximo evento</h2>
-<p><strong>Formação de Segurança</strong></p>
-<p>25 de março de 2024, 09:00</p>
-<p>Sala 101</p>
+
+  
+<div class="top-logo">
+  <img src="img/ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
 </div>
-<div class="card">
-<h3>25 mar</h3>
-<p><strong>Formação de Introdução</strong></p>
-<p>Sala 1</p>
-</div>
-<div class="card">
-<h3>26 mar</h3>
-<p><strong>Promestura de voca</strong></p>
-<p>10:00 · Sala 45</p>
-</div>
-<div class="card">
-<h3>29 mar</h3>
-<p><strong>Assembleia</strong></p>
-<p>Tendência</p>
-</div>
-</section>
-</main>
-</div>
+
+  <div class="main-content">
+    <h1>Dashboard</h1><p>Resumo geral do sistema.</p>
+  </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const calendarEl = document.getElementById('calendar');
+        if (calendarEl) {
+            const calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth'
+            });
+            calendar.render();
+        }
+    });
+  </script>
 </body>
 </html>
