--- a/admin.html
+++ b/admin.html
@@ -1,30 +1,53 @@
-
 <!DOCTYPE html>
-
 <html lang="pt">
 <head>
-<meta charset="utf-8"/>
-<title>Administração</title>
-<link href="style.css" rel="stylesheet"/>
+  <meta charset="UTF-8" />
+  <title>Administração</title>
+  <link rel="stylesheet" href="style.css" />
+  
 </head>
-<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
-<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
+<body>
+
+<div class="header">
+  <img src="ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
+</div>
+
+  
+<div class="sidebar">
+  <ul>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="agendamentos.html">Agendamentos</a></li>
+    <li><a href="calendario.html">Calendário</a></li>
+    <li><a href="salas.html">Salas</a></li>
+    <li><a href="admin.html">Administração</a></li>
+  </ul>
+</div>
+
+  
+<div class="top-logo">
+  <img src="img/ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
+</div>
+
+  <div class="main-content">
+    
+<h1>Administração</h1>
+<p>Gestão de utilizadores e permissões.</p>
+<ul>
+  <li>Utilizador: Bruno</li>
+  <li>Permissão: Administrador</li>
 </ul>
-</div>
 
-<div style="text-align: center; padding: 10px; background-color: white; position: fixed; top: 0; left: 220px; right: 0; z-index: 1000;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-</div>
-
-<div class="content">
-<h2>Painel de Administração</h2>
-<p>Funcionalidades administrativas estarão aqui.</p>
-</div>
+  </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const calendarEl = document.getElementById('calendar');
+        if (calendarEl) {
+            const calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth'
+            });
+            calendar.render();
+        }
+    });
+  </script>
 </body>
 </html>
