--- a/agendamentos.html
+++ b/agendamentos.html
@@ -1,137 +1,106 @@
 <!DOCTYPE html>
-
 <html lang="pt">
 <head>
-<meta charset="utf-8"/>
-<title>Início</title>
-<link href="style.css" rel="stylesheet"/>
+  <meta charset="UTF-8" />
+  <title>Agendamentos</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
-<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
-</ul>
+<body>
+
+<div class="header">
+  <img src="ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
 </div>
 
+<div class="sidebar">
+  <ul>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="agendamentos.html">Agendamentos</a></li>
+    <li><a href="calendario.html">Calendário</a></li>
+    <li><a href="salas.html">Salas</a></li>
+    <li><a href="admin.html">Administração</a></li>
+  </ul>
+</div>
 
 <div class="main-content">
-<div class="header">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
+  <h1>Agendamentos</h1>
+  <a href="#" class="botao-novo" onclick="abrirModal()">+ Novo Agendamento</a>
+  <p>[Lista de agendamentos irá aqui]</p>
+
+  <!-- Modal -->
+  <div id="modalAgendamento" class="modal">
+    <div class="modal-content">
+      <span class="fechar" onclick="fecharModal()">&times;</span>
+      <h2>Novo Agendamento</h2>
+      <form>
+        <fieldset>
+          <legend><strong>Requerente</strong></legend>
+          <label>Número Mecanográfico:<br><input type="text" required></label><br><br>
+          <label>Nome do Requerente:<br><input type="text" required></label><br><br>
+          <label>Serviço do Requerente:<br><input type="text" required></label><br><br>
+          <div class="linha">
+            <label><input type="email" required placeholder="Email"></label>
+            <label><input type="tel" required placeholder="Contacto"></label>
+          </div>
+        </fieldset><br>
+
+        <fieldset>
+          <legend><strong>Evento</strong></legend>
+          <label>Sala Pretendida:<br>
+            <select required>
+              <option value="">-- Selecione --</option>
+              <option>Sala Tejo</option>
+              <option>Sala Almada</option>
+              <option>Sala Formação</option>
+            </select>
+          </label><br><br>
+          <div class="linha">
+            <label><input type="text" required placeholder="Nome do Evento"></label>
+            <label><input type="number" placeholder="N.º de Participantes"></label>
+          </div>
+        </fieldset><br>
+
+        <fieldset>
+          <legend><strong>Data e Hora</strong></legend>
+          <label>Data:<br><input type="date" required></label><br><br>
+          <label>Hora Início:<br><input type="time" required></label><br><br>
+          <label>Hora Fim:<br><input type="time" required></label><br><br>
+          <label><input type="checkbox"> Agendar para mais de um dia</label>
+        </fieldset><br>
+
+        <fieldset>
+          <legend><strong>Recursos</strong></legend>
+          <label><input type="checkbox"> Projetor</label><br>
+          <label><input type="checkbox"> Computador</label><br>
+          <label><input type="checkbox"> Som</label><br>
+          <label><input type="checkbox"> Coffee break</label>
+        </fieldset><br>
+
+        <fieldset>
+          <legend><strong>Observações</strong></legend>
+          <textarea rows="4" placeholder="Escreva aqui..."></textarea>
+        </fieldset><br>
+
+        <button type="submit" class="botao-novo">Submeter</button>
+        <button type="button" onclick="fecharModal()">Cancelar</button>
+      </form>
+    </div>
+  </div>
 </div>
-<div class="welcome">
-<h1>Agendamentos</h1>
-<body>
-<div style="text-align: center; padding: 10px; background-color: white; position: fixed; top: 0; left: 220px; right: 0; z-index: 1000;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-</div>
-<div style="margin-left: 220px; margin-top: 100px; padding: 20px;">
-<div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="index.html" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="agendamentos.html" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="calendario.html" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="salas.html" style="color: white; text-decoration: none;">Salas</a></li>
-<li style="margin-bottom: 15px;"><a href="admin.html" style="color: white; text-decoration: none;">Administração</a></li>
-</ul>
-</div>
-<!-- Modal Novo Agendamento" onclick="abrirModal() -->
-<div class="modal" id="modal-agendamento">
-<div class="modal-content">
-<span class="close-button" onclick="fecharModal()">×</span>
-<h2>Novo Agendamento" onclick="abrirModal()</h2>
-<form id="formModal">
-<label for="sala">Sala:</label>
-<select id="sala" required="">
-<option value="">Selecione...</option>
-<option>Almada</option>
-<option>Garcia de Orta</option>
-<option>Tejo</option>
-</select>
-<label for="data">Data:</label>
-<input id="data" required="" type="date"/>
-<label for="hora">Hora:</label>
-<input id="hora" required="" type="time"/>
-<label for="capacidade">Capacidade Necessária:</label>
-<input id="capacidade" required="" type="number"/>
-<button type="submit">Verificar Disponibilidade</button>
-</form>
-</div>
-</div>
+
 <script>
   function abrirModal() {
-    document.getElementById('modal-agendamento').style.display = 'block';
+    document.getElementById('modalAgendamento').style.display = 'block';
   }
   function fecharModal() {
-    document.getElementById('modal-agendamento').style.display = 'none';
+    document.getElementById('modalAgendamento').style.display = 'none';
   }
-  document.getElementById('formModal')?.addEventListener('submit', function(e) {
-    e.preventDefault();
-    alert("Verificação de disponibilidade realizada com sucesso!");
-    fecharModal();
-  });
+  window.onclick = function(event) {
+    const modal = document.getElementById('modalAgendamento');
+    if (event.target == modal) {
+      modal.style.display = 'none';
+    }
+  };
 </script>
-<div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="index.html" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="agendamentos.html" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="calendario.html" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="salas.html" style="color: white; text-decoration: none;">Salas</a></li>
-<li style="margin-bottom: 15px;"><a href="admin.html" style="color: white; text-decoration: none;">Administração</a></li>
-</ul>
-</div>
-<div class="content">
-<h2>Agendamentos</h2>
-<button onclick="document.getElementById('modal').style.display='block'">Novo Agendamento" onclick="abrirModal()</button>
-<div class="modal" id="modal">
-<div class="modal-content">
-<span class="close" onclick="document.getElementById('modal').style.display='none'">×</span>
-<h3>Formulário de Agendamento</h3>
-<form>
-<label>Número Mecanográfico:</label><br/><input type="text"/><br/>
-<label>Nome do Requerente:</label><br/><input type="text"/><br/>
-<label>Serviço do Requerente:</label><br/><input type="text"/><br/>
-<label>Email / Contacto:</label><br/><input type="text"/><br/>
-<label>Sala Pretendida:</label><br/>
-<select>
-<option>Piso 2 HGO - Almada</option>
-<option>Piso 2 HGO - Garcia de Orta</option>
-<option>Piso 2 HGO - Tejo</option>
-<option>Piso 0 HGO - Informática</option>
-<option>CIRMA - S. João</option>
-<option>CIRMA - CDC</option>
-<option>CF Sobreda - Auditório</option>
-<option>CF Sobreda - Tejo</option>
-<option>CF Sobreda - Sado</option>
-<option>Sala Amora</option>
-<option>Sala Seixal</option>
-<option>Sala IPQ</option>
-<option>Sala IEP</option>
-<option>Sala Heli Porto</option>
-</select><br/>
-<label>Nome do Evento:</label><br/><input type="text"/><br/>
-<label>Número de Participantes:</label><br/><input type="number"/><br/>
-<label>Data e Hora:</label><br/><input type="datetime-local"/><br/>
-<fieldset>
-<legend>Equipamentos:</legend>
-<label><input type="checkbox"/> Projetor</label>
-<label><input type="checkbox"/> Computador</label>
-<label><input type="checkbox"/> Som</label>
-<label><input type="checkbox"/> Coffee break</label>
-</fieldset>
-<label>Observações Extras:</label><br/>
-<textarea></textarea><br/>
-<button type="submit">Submeter Agendamento</button>
-</form>
-</div>
-</div>
-</div>
-</div>
-</body>
-</div>
-</div>
+
 </body>
 </html>
