--- a/salas.html
+++ b/salas.html
@@ -1,80 +1,54 @@
 <!DOCTYPE html>
-
 <html lang="pt">
 <head>
-<meta charset="utf-8"/>
-<title>Início</title>
-<link href="style.css" rel="stylesheet"/>
+  <meta charset="UTF-8" />
+  <title>Salas</title>
+  <link rel="stylesheet" href="style.css" />
+  
 </head>
-<body><div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="#" style="color: white; text-decoration: none;">Salas</a></li>
-<li><a href="#" style="color: white; text-decoration: none;">Administração</a></li>
-</ul>
-</div>
-
-
-<div class="main-content">
-<div class="header">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;"/>
-</div>
-<div class="welcome">
-<h1>Salas</h1>
 <body>
-<div style="text-align: center; padding: 10px; background-color: white; position: fixed; top: 0; left: 220px; right: 0; z-index: 1000;">
-<img alt="Logotipo ULSAS" src="img/ulsas_logotipo.png" style="display: block; margin: 20px auto;">
-</img></div>
-<div style="margin-left: 220px; margin-top: 100px; padding: 20px;">
-<div class="sidebar" style="background-color: #2E7D32; color: white; width: 220px; height: 100vh; padding-top: 10px; position: fixed; left: 0; top: 0;">
-<ul style="list-style: none; padding-left: 20px; font-weight: bold;">
-<li style="margin-bottom: 15px;"><a href="index.html" style="color: white; text-decoration: none;">Início</a></li>
-<li style="margin-bottom: 15px;"><a href="agendamentos.html" style="color: white; text-decoration: none;">Agendamentos</a></li>
-<li style="margin-bottom: 15px;"><a href="calendario.html" style="color: white; text-decoration: none;">Calendário</a></li>
-<li style="margin-bottom: 15px;"><a href="salas.html" style="color: white; text-decoration: none;">Salas</a></li>
-<li style="margin-bottom: 15px;"><a href="admin.html" style="color: white; text-decoration: none;">Administração</a></li>
+
+<div class="header">
+  <img src="ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
+</div>
+
+  
+<div class="sidebar">
+  <ul>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="agendamentos.html">Agendamentos</a></li>
+    <li><a href="calendario.html">Calendário</a></li>
+    <li><a href="salas.html">Salas</a></li>
+    <li><a href="admin.html">Administração</a></li>
+  </ul>
+</div>
+
+  
+<div class="top-logo">
+  <img src="img/ulsas_logotipo.png" alt="Logotipo ULSAS" class="logo" />
+</div>
+
+  <div class="main-content">
+    
+<h1>Salas</h1>
+<p>Lista de salas disponíveis.</p>
+<ul>
+  <li>Sala Tejo</li>
+  <li>Sala Almada</li>
+  <li>Sala Formação</li>
 </ul>
-</div>
-<main>
-<section class="salas-section">
-<h2>Lista de Salas</h2>
-<div class="tabela-salas">
-<table style="margin: auto;">
-<thead>
-<tr>
-<th>Sala</th>
-<th>Localização</th>
-<th>Capacidade</th>
-<th>Observações</th>
-</tr>
-</thead>
-<tbody>
-<tr><td>Almada</td><td>Piso 2 - HGO</td><td>20 pessoas</td><td>Wc, Refeitório, AC</td></tr>
-<tr><td>Garcia de Orta</td><td>Piso 2 - HGO</td><td>50 pessoas</td><td>Wc, Refeitório, AC</td></tr>
-<tr><td>Tejo</td><td>Piso 2 - HGO</td><td>30 pessoas</td><td>Wc, Refeitório, AC (pode ser marcada em conjunto)</td></tr>
-<tr><td>Informática</td><td>Piso 0 - HGO</td><td>20 pessoas / 10 PCs</td><td></td></tr>
-<tr><td>S. João</td><td>CIRMA</td><td>—</td><td></td></tr>
-<tr><td>CDC</td><td>CIRMA</td><td>40 pessoas</td><td></td></tr>
-<tr><td>Auditório</td><td>CF Sobreda</td><td>—</td><td></td></tr>
-<tr><td>Tejo</td><td>CF Sobreda</td><td>—</td><td></td></tr>
-<tr><td>Sado</td><td>CF Sobreda</td><td>—</td><td></td></tr>
-<tr><td>Amora</td><td>—</td><td>—</td><td></td></tr>
-<tr><td>Seixal</td><td>—</td><td>—</td><td></td></tr>
-<tr><td>IPQ</td><td>—</td><td>—</td><td></td></tr>
-<tr><td>IEP</td><td>—</td><td>—</td><td></td></tr>
-<tr><td>Heli Porto</td><td>—</td><td>—</td><td></td></tr>
-</tbody>
-</table>
-</div>
-</section>
-</main>
-<script src="sidebar.js"></script>
-</div>
-</body>
-</div>
-</div>
+
+  </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const calendarEl = document.getElementById('calendar');
+        if (calendarEl) {
+            const calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth'
+            });
+            calendar.render();
+        }
+    });
+  </script>
 </body>
 </html>
